--- a/publish.html
+++ b/publish.html
@@ -8,7 +8,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="诗词大全">
   <meta name="author" content="Micahel ">
-  <link rel="icon" href="../img/ic_launcher.ico">
+  <link rel="icon" href="img/ic_launcher.ico">
   <style>
     [v-cloak] {
       display: none;
