--- a/poem.html
+++ b/poem.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Test">
+  <meta name="author" content="Michael xu">
    <meta property="og:image" content="https://s3-us-west-2.amazonaws.com/i.cdpn.io/12596.eNQKqj.8e2dbb35-151f-49a4-abbe-15191f8f727e.png" />
     <meta property="og:title" content="LOOPPDS TEST PAGE" />
     <meta property="og:description" content=" Anyone in these groups will be more likely to see this post, others will be less likely, but may still see it anyway. Any of the targeting fields shown here can be used, none are required (applies to Pages only)." />
